Started adding content and fixed content alignment

--- a/style.css
+++ b/style.css
@@ -66,7 +66,22 @@ header {
     outline-style: solid;
     outline-color: black;
     border-radius: 12px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
+
+.info h2 {
+    text-align: center;
+    flex: 0 0 100%
+}
+
+
+
 
 
 .hidden {
@@ -105,4 +120,5 @@ header {
     margin: 40px auto;
     background-color: #fff;
     border-radius: 15px;
+
 }
